--- a/ui/app/templates/deposit/detail.jinja2
+++ b/ui/app/templates/deposit/detail.jinja2
@@ -12,7 +12,8 @@
     <tr>
         <td>From</td>
         <td>
-            <a href="{{ url_for('entity.detail', id=deposit.from_entity_id) }}">{{deposit.from_entity.name}}</a>
+            <a href="{{ url_for('entity.detail', id=deposit.from_entity_id) }}"
+                class="{% if not deposit.from_entity.active %}secondary inactive{% endif %}">{{deposit.from_entity.name}}</a>
             {% for tag in deposit.from_entity.tags %}
             {{ tag_inline(tag) }}
             {% endfor %}
@@ -21,7 +22,8 @@
     <tr>
         <td>To</td>
         <td>
-            <a href="{{ url_for('entity.detail', id=deposit.to_entity_id) }}">{{deposit.to_entity.name}}</a>
+            <a href="{{ url_for('entity.detail', id=deposit.to_entity_id) }}"
+                class="{% if not deposit.to_entity.active %}secondary inactive{% endif %}">{{deposit.to_entity.name}}</a>
             {% for tag in deposit.to_entity.tags %}
             {{ tag_inline(tag) }}
             {% endfor %}
@@ -52,7 +54,8 @@
     <tr>
         <td>Actor</td>
         <td>
-            <a href="{{ url_for('entity.detail', id=deposit.actor_entity_id) }}">{{deposit.actor_entity.name}}</a>
+            <a href="{{ url_for('entity.detail', id=deposit.actor_entity_id) }}"
+                class="{% if not deposit.actor_entity.active %}secondary inactive{% endif %}">{{deposit.actor_entity.name}}</a>
         </td>
     </tr>
     <tr>
