--- a/ui/app/templates/split/detail.jinja2
+++ b/ui/app/templates/split/detail.jinja2
@@ -37,7 +37,8 @@
     <tr>
         <td>Recipient</td>
         <td>
-            <a href="{{ url_for('entity.detail', id=split.recipient_entity.id) }}">
+            <a href="{{ url_for('entity.detail', id=split.recipient_entity.id) }}"
+                class="{% if not split.recipient_entity.active %}secondary inactive{% endif %}">
                 {{ split.recipient_entity.name }}
             </a>
             {% for tag in split.recipient_entity.tags %}
@@ -48,7 +49,8 @@
     <tr>
         <td>Actor</td>
         <td>
-            <a href="{{ url_for('entity.detail', id=split.actor_entity.id) }}">
+            <a href="{{ url_for('entity.detail', id=split.actor_entity.id) }}"
+                class="{% if not split.actor_entity.active %}secondary inactive{% endif %}">
                 {{ split.actor_entity.name }}
             </a>
             {% for tag in split.actor_entity.tags %}
@@ -84,7 +86,8 @@
         {% for participant in split.participants %}
         <tr>
             <td>
-                <a href="{{ url_for('entity.detail', id=participant.entity.id) }}">
+                <a href="{{ url_for('entity.detail', id=participant.entity.id) }}"
+                    class="{% if not participant.entity.active %}secondary inactive{% endif %}">
                     {{ participant.entity.name }}
                 </a>
                 {% for tag in participant.entity.tags %}
