--- a/ui/app/templates/transaction/macro_list.jinja2
+++ b/ui/app/templates/transaction/macro_list.jinja2
@@ -27,7 +27,9 @@
             <td>{{ human_readable_date(transaction.created_at) | safe }}</td>
 
             <td>
-                <a href="{{ url_for('entity.detail', id=transaction.from_entity_id) }}">{{ transaction.from_entity.name
+                <a href="{{ url_for('entity.detail', id=transaction.from_entity_id) }}"
+                    class="{% if not transaction.from_entity.active %}secondary inactive{% endif %}">{{
+                    transaction.from_entity.name
                     }}</a>
                 {% for tag in transaction.from_entity.tags %}
                 {{ tag_inline(tag) }}
@@ -35,7 +37,9 @@
             </td>
 
             <td>
-                <a href="{{ url_for('entity.detail', id=transaction.to_entity_id) }}">{{ transaction.to_entity.name
+                <a href="{{ url_for('entity.detail', id=transaction.to_entity_id) }}"
+                    class="{% if not transaction.to_entity.active %}secondary inactive{% endif %}">{{
+                    transaction.to_entity.name
                     }}</a>
                 {% for tag in transaction.to_entity.tags %}
                 {{ tag_inline(tag) }}
@@ -73,8 +77,8 @@
             <td>{{ transaction.comment or '' }}</td>
             <td>{{ transaction.status }}</td>
             <td>
-                <a
-                    href="{{ url_for('entity.detail', id=transaction.actor_entity_id) }}">{{transaction.actor_entity.name}}</a>
+                <a href="{{ url_for('entity.detail', id=transaction.actor_entity_id) }}"
+                    class="{% if not transaction.actor_entity.active %}secondary inactive{% endif %}">{{transaction.actor_entity.name}}</a>
             </td>
         </tr>
         {% endfor %}
