--- a/ui/app/templates/treasury/delete.jinja2
+++ b/ui/app/templates/treasury/delete.jinja2
@@ -1,7 +1,8 @@
 {% extends 'base.jinja2' %}
 {% from 'form.jinja2' import render_form %}
 
-{% block title %}Delete Treasury {{ treasury.name }}?{% endblock %}
+{% block title %}Delete Treasury <span class="{% if not treasury.active %}secondary inactive{% endif %}">{{
+    treasury.name }}</span>?{% endblock %}
 
 {% block content %}
 <form method="post">
