--- a/ui/app/templates/transaction/shortcuts_reimburse.jinja2
+++ b/ui/app/templates/transaction/shortcuts_reimburse.jinja2
@@ -9,8 +9,8 @@
             <td><b>From</b></td>
             <td>
                 <select name="from_entity_id" required>
-                    <option value="141">Fridge (id: 141)</option>
-                    <option value="150">Coffee machine (id: 150)</option>
+                    <option value="{{ fridge_entity_id }}">Fridge (id: {{ fridge_entity_id }})</option>
+                    <option value="{{ coffee_entity_id }}">Coffee machine (id: {{ coffee_entity_id }})</option>
                 </select>
             </td>
         </tr>
