--- a/ui/app/templates/transaction/shortcuts_reimburse.jinja2
+++ b/ui/app/templates/transaction/shortcuts_reimburse.jinja2
@@ -22,7 +22,7 @@
         <input type="hidden" name="to_entity_id" value="{{ g.actor_entity.id }}">
         <tr>
             <td>Amount</td>
-            <td><input name="amount" type="number" step="0.01" placeholder="5.00" required></td>
+            <td><input name="amount" type="number" step="0.01" placeholder="100" required></td>
         </tr>
         <tr>
             <td>Currency</td>
@@ -40,8 +40,12 @@
         </tr>
         <tr>
             <td></td>
-            <td><button type="submit">Create Reimbursement</button></td>
+            <td><button type="submit">Get Reimbursement</button></td>
         </tr>
     </table>
 </form>
+
+<img src="{{ url_for('static', filename='/images/transaction/shortcuts/reimburse.jpg') }}" alt="Reimbursement Diagram"
+    style="max-width: 50rem">
+
 {% endblock %}
