--- a/ui/app/templates/base.jinja2
+++ b/ui/app/templates/base.jinja2
@@ -28,6 +28,9 @@
             <li {% if 'transaction' in request.url_rule.endpoint %} class="active" {% endif %}>
                 <a href="{{ url_for('transaction.list') }}">Transaction</a>
             </li>
+            <li {% if 'invoice' in request.url_rule.endpoint %} class="active" {% endif %}>
+                <a href="{{ url_for('invoice.list') }}">Invoice</a>
+            </li>
             {# <li {% if 'deposit' in request.url_rule.endpoint %} class="active" {% endif %}>
                 <a href="{{ url_for('deposit.list') }}">Deposit</a>
             </li> #}
