--- a/ui/app/templates/fee/index.jinja2
+++ b/ui/app/templates/fee/index.jinja2
@@ -2,7 +2,7 @@
 
 {% from 'widgets/tag_inline.jinja2' import tag_inline %}
 
-{% block title %}Resident Fee{% endblock %}
+{% block title %}Fee{% endblock %}
 {% block content %}
 {% set month_names = ["", "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"] %}
 <table>
