--- a/ui/app/templates/invoice/macro_list.jinja2
+++ b/ui/app/templates/invoice/macro_list.jinja2
@@ -8,6 +8,7 @@
             <tr>
                 <td>ID</td>
                 <td>Date</td>
+                <td>Billing period</td>
                 <td>From</td>
                 <td>To</td>
                 <td>Amounts</td>
@@ -21,6 +22,7 @@
         <tr {% if invoice.status=="paid" %} class="secondary" {% endif %}>
             <td><a href="{{ url_for('invoice.detail', id=invoice.id) }}">{{ invoice.id }}</a></td>
             <td>{{ human_readable_date(invoice.created_at) }}</td>
+            <td>{{ (invoice.billing_period|string)[:7] if invoice.billing_period else "" }}</td>
             <td>
                 <a href="{{ url_for('entity.detail', id=invoice.from_entity_id) }}"
                     class="{% if not invoice.from_entity.active %}secondary inactive{% endif %}">{{
